Fix shape SVG border clipping by setting overflow: visible

--- a/style.css
+++ b/style.css
@@ -703,6 +703,7 @@ body, html {
 .shape-svg-wrapper svg {
     width: 100%;
     height: 100%;
+    overflow: visible;
 }
 
 /* Text Container inside shape */
